style.css
@import url("https://fonts.googleapis.com/css2?family=Akronim&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=Playfair:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=New+Rocker&family=Playfair:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
html,
body {
  margin: 0;
  background-color: rgb(0, 0, 0);
}

nav {
  background-color: black;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  top:0;
  position: sticky;
  z-index: 3;
}

.a-tag{
  text-decoration: none;
  height: fit-content;
}



/* Initial styles for the logo */
#logo {
  width: 200px;
  height: 114px;
  transition: width 0.3s ease-in-out; 
  cursor: pointer;
}


.page-links {
  display: flex;
  justify-content: space-around;
  gap: 30px;
  margin-top: 60px;
  margin-right: 60px;
  color: white;
}

li {
  color: white;
  list-style: none;
  font-size: 21px;
  cursor: pointer;
  transition: color 200ms;
}

li:hover {
  color: rgb(168, 0, 0);
}

span {
  font-size: 21px;
}

figure {
  margin: 0;
  width: 100%;
  height: 400px;
  background-image: url("images/dish1.jpg");
  background-size: cover;
  background-position: center;
}

.over-lay {
  /* font-family: "New Rocker", cursive; */
  font-family: serif;
  font-weight: 700;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.437);
  color: rgb(255, 255, 255);
  width: 100%;
  font-family: "New Rocker", cursive;

}

.ol{
color: black;
}

.dish1 {
  margin: 0;
  width: 100%;
  height: 100%;
}

main{
  background: linear-gradient( white, black, white);
/* padding: 20px; */
}

#home-nav {
  display: flex;
  justify-content: center;
  gap: 20px;
  margin-bottom: 10px;
  overflow-x: auto;
  text-align: center;
  position: sticky;
  top: 0;
  background-color: rgb(255, 255, 255);
 

}

#home-nav ul { 
  list-style: none;
  padding: 0;
  margin: 0;
  white-space: nowrap; /* Prevent line breaks */
}

#home-nav li {
  display: inline-block;
  color: rgb(0, 0, 0);
  position: sticky;
  top: 0;

}

#home-nav li:hover{
  color: rgb(153, 0, 0);
}

#home-nav span {
  margin: 0 5px; /* Adjust the spacing between the separator and the list item */
}

@media screen and (max-width: 637px) {
  #home-nav {
    max-width: 100%;
    justify-content: flex-start;
    padding: 0 10px;
    overflow-x: scroll;
  }
}

.welcome-message{
 
  /* background-color: rgb(110, 0, 0); */
  background-color: rgb(144, 0, 0);
  /* font-size: 54px; */
  padding: 20px;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  /* border-bottom: black solid; */
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  /* background-color: white; */
  border-bottom: black solid;
  color: rgb(255, 255, 255);
  text-decoration: underline;
  font-size: 5vw;
  font-family: "New Rocker", cursive;
  
  font-family: serif;
  /* font-family: 'Montserrat', sans-serif; */
  font-weight: 700;
}



.section-one{
  display: flex;
  justify-content: space-around;
  align-items: center;
  /* width: 500px; */

  flex-wrap: wrap-reverse;
  border-bottom: solid black 1px;
  background-image: url('images/dish1.jpg');
  background-position: center;
  background-size: cover;
  margin-top: -10px;
  border-top:solid black 2px ;
  min-height: 300px;
}

.ramen-png{
  position: absolute;
  z-index: 0;
  width: 1000px;
  height: 550px;
  margin-left: -800px;
  padding: 20px;
}

.section-one-h1{
  text-align: center;
  font-weight: 900;
  font-family: arial;
  /* font-size: 65px; */
  padding: 20px;
  /* width: 500px;
  height: 270px; */
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  color: white;
  font-size: 3vw;

}

@media screen and (max-width: 990px) {

  .section-one{
    justify-content: center;
  }
}

@media screen and (max-width: 635px) {

  .welcome-message{
    font-size: 8vw;
  }

  .ramen-png{
    height: 620px;
    width: 760px;
    padding-left: 0;
    margin-left: -81px;
   
  }

  .section-one-h1{
    font-weight: 600;
  font-size: 7vw;
  height: auto;
  }
}



.section-two{
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  padding-top:10px;
  gap:20px;
  /* background-image: url('images/chopsticks.jpg'); */
background-position: center;
background-size: cover;
background: linear-gradient( white, black);

}

.business-hours-container{
  z-index: 1;
  border: solid 1px rgb(135, 135, 135);
  height: fit-content;
  border-radius: 10px;
  background-color: rgb(255, 255, 255);
}

.h2-business-hours{
  border-radius: 10px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

.business-hours {
  display: flex;
  flex-direction: column;
  width: min-content;
  gap: 10px;
  color: rgb(0, 0, 0);
  padding: 10px;
  width: 330px;
  height: min-content;
  font-family: "New Rocker", cursive;
  font-size: 18px;
  margin-top: -10px;
}

.category{
  text-align: center;
  text-decoration: underline;
}

.container{
  display: flex;
  justify-content: space-between;
}

.day {
  font-weight: bold;
}

.hours {
  color: #000000;
}

.c-image {
  height: 400px;
  object-fit:cover;
}

.map-container{
  z-index: 1;
  background-color: rgb(182, 0, 0);
  height: fit-content;
  height: 389px;
  border-radius: 10px;
}

.h2-location{
  color: white;
}

.map{
  border-radius: 10px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  width: 330px;
  height: 350px;
  background-color: rgb(96, 96, 96);
  padding: 1px;
}

.copy-right{
  color: rgb(255, 255, 255);
  text-align: center;
  background-color: rgb(0, 0, 0);
}

section{
  margin-bottom: 100px;
}





footer{
  position: fixed;
  width: 100%;
  bottom: 0;
  z-index: 4;
 display: flex;
 justify-content: center;
 align-items: center;
/* height: 100%; */
background-color: black;
/* padding: 230px; */
height: 59px;
z-index: 1;
}


.yelp{
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 150px;
  font-size: 26px;
  color: rgb(106, 149, 235);
  transition: color 300ms;
  z-index: 3;
}

.phone-color{
  color: rgb(30, 193, 98);
  transition: color 300ms;
  width: min-content;
  height: max-content;
}

.facebook {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 60px;
  font-size: 26px;
  color: rgb(106, 149, 235);
  transition: color 300ms;
  z-index: 3;

}

.instagram {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 110px;
  font-size: 26px;
  color: rgb(255, 0, 144);
  transition: color 300ms;
  z-index: 3;

}

.instagram2{
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  font-size: 26px;
  color: rgb(30, 193, 98);
  transition: color 300ms;
  z-index: 3;
}


.instagram2:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
  /* color: rgb(177, 0, 0); */
  /* transform: rotate(-0.25turn); */
  color: aliceblue;
}



@media screen and (max-width: 700px) {

  nav{
    justify-content: center;
  }

  .page-links{
    margin-top: 0;
    margin-right: 10px;
    margin-left: -15px;
  }
}

.carousel-caption {
  font-size: 24px;
}


@media (max-width: 768px) {
  .carousel-caption {
    font-size: 16px !important;
  }
  .quote{
    font-size: 16px !important;
  }
  .name{
    font-size: 18px;
  }
}


@media (max-width: 538px) {

  
  .facebook {
    position: fixed;
    top: 0;
    right: 0;
    margin: 12px;
    margin-top: 60px;
    margin-right: 10px;
    font-size: 26px;
    color: rgb(106, 149, 235);
    z-index: 6;
    
  }

  .yelp {
    position: fixed;
    top: 0;
    left: 0;
    margin: 12px;
    margin-top: 60px;
    margin-left: 10px;
    font-size: 26px;
    color: rgb(106, 149, 235);
    z-index: 6;
    width: min-content;
    height: min-content;
  }
  
  .instagram {
    position: fixed;
    top: 0;
    right: 0;
    margin-right: 10px;
    font-size: 26px;
    color: rgb(255, 152, 210);
    z-index: 4;
  }

  .instagram2{
    position: fixed;
    top: 0;
    left: 0;
    margin-left: 10px;
    font-size: 26px;
    color: rgb(30, 193, 98);
    z-index: 4;
    /* width: min-content;
    height: min-content;  */
    width: 36px;
    height: 36px;
  }
}


/* --------------Menu Page------------------- */


#menu-nav {
  display: flex;
  justify-content: center;
  gap: 20px;
  margin-bottom: 10px;
  overflow-x: auto;
  text-align: center;
  position: sticky;
  top: 0;
  background-color: rgb(255, 255, 255);
 

}

#menu-nav ul { 
  list-style: none;
  padding: 0;
  margin: 0;
  white-space: nowrap; /* Prevent line breaks */
}

#menu-nav li {
  display: inline-block;
  color: rgb(0, 0, 0);
  position: sticky;
  top: 0;

}

#menu-nav li:hover{
  color: rgb(153, 0, 0);
}

#menu-nav span {
  margin: 0 5px; /* Adjust the spacing between the separator and the list item */
}

@media screen and (max-width: 1200px) {
  #menu-nav {
    max-width: 100%;
    justify-content: flex-start;
    padding: 0 10px;
    overflow-x: scroll;
  }
}

.food-items{
  gap: 20px;
  flex-wrap: wrap;
  background: linear-gradient( white, black, white);
  padding: 20px;
}





.h2-ramen, .h2-toppings{
  border-bottom: black solid;
  background-color: rgb(255, 255, 255);
  color: black;
}

.menu-h2-image{
  width: 100%;
  height: 150px;
  object-fit: cover;
}


.food-items-ramen{
  display: flex;
  justify-content: center;
  gap: 30px;
  background-color: rgb(255, 255, 255);
  background-position: center;
  background-size: cover;
  flex-wrap: wrap;
  padding: 20px;
  background: transparent;
}

.food-items-toppings{
  display: flex;
  justify-content: center;
  gap: 30px;
  background-color: rgb(255, 255, 255);
  background-position: center;
  background-size: cover;
  flex-wrap: wrap;
  padding: 20px;
  background: transparent;
}

.image-container {
  position: relative;
}

.menu-h2-image {
  width: 100%;
  height: 200px;
  object-fit: cover;
}

.image-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 24px;
  font-weight: bold;
  text-align: center;
}

 /* Gallery container */
 .gallery-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  flex-direction: column;
  background-color: black;
  border-top-left-radius:10px;
  border-top-right-radius:10px;
  border: solid;
}


.h2-gallery{
  /* background-color: black; */
  color: white;
  background-color: rgb(0, 0, 0);
  border-top-left-radius:10px;
  border-top-right-radius:10px;
}

.gallery{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  background-color: black;
  width: 600px;
  height: 500px;
  overflow: scroll;
  border-radius:10px;
  border-top-left-radius:0px;
  border-top-right-radius:0px;
  margin-top: -6px;

}


.image-container {
  position: relative;
}

.modal-trigger {
  cursor: pointer;
}

.modal {
  display: none;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.9);
}

#modal-image {
  display: block;
  max-width: 90%;
  max-height: 90%;
  margin: 10% auto;
}


.close {
  color: #fff;
  font-size: 3rem;
  position: absolute;
  top: 20px;
  right: 30px;
  cursor: pointer;
}

img.modal-trigger{
  width: 200px;
  height: 200px;
}



@media screen and (max-width: 720px) {
  .gallery{
    max-width: 330px;
    justify-content: center;
    padding: 0 10px;
    overflow-x: scroll;
  }
  img.modal-trigger{
    width: 150px;
    height: 150px;
  }
}


.scroll-link {
  position: relative;
}

.scroll-link::before {
  content: "";
  position: absolute;
  top: -100px;
  left: 0;
  width: 100%;
  height: 20px;
  z-index: -1;
}

